resolved fdo#70815 broadcast emptied cell in ScColumn::SwapRow()

Change-Id: Ie939f12a54d0b4cf8bedc34683e20fb924f1bf3b